Broaden implicit suppression of welcome pages.

Also suppress them when the RestoreOnStartup policy has a recommended
value that is overridden with a user-provided value.

BUG=824059

Change-Id: I586411b9fded82841e174468cb830604b7121906
Reviewed-on: https://chromium-review.googlesource.com/1100755
Commit-Queue: Greg Thompson <grt@chromium.org>
Reviewed-by: Tommy Martino <tmartino@chromium.org>
Reviewed-by: Gabriel Charette <gab@chromium.org>
Cr-Commit-Position: refs/heads/master@{#567391}
Former-commit-id: 117b5f5af29baad887eb25d77d1f5fd819152533