chrome/browser/prefs/session_startup_pref.h
@@ -55,11 +55,13 @@ struct SessionStartupPref {
   static SessionStartupPref GetStartupPref(Profile* profile);
   static SessionStartupPref GetStartupPref(PrefService* prefs);
 
-  // Whether the startup type and URLs are managed via either mandatory or
-  // recommended policy.
+  // Whether the startup type and URLs are managed via mandatory policy.
   static bool TypeIsManaged(PrefService* prefs);
-  static bool TypeIsRecommended(PrefService* prefs);
   static bool URLsAreManaged(PrefService* prefs);
+
+  // Whether the startup type has a recommended value (regardless of whether or
+  // not that value is in use).
+  static bool TypeHasRecommendedValue(PrefService* prefs);
 
   // Whether the startup type has not been overridden from its default.
   static bool TypeIsDefault(PrefService* prefs);
