chrome/browser/ui/startup/startup_browser_creator_impl.cc
@@ -683,12 +683,12 @@ void StartupBrowserCreatorImpl::DetermineURLsAndLaunch(
         IncompatibleApplicationsUpdater::HasCachedApplications();
   }
 #endif
-  const auto session_startup_pref =
-      StartupBrowserCreator::GetSessionStartupPref(command_line_, profile_);
-  // Both mandatory and recommended startup policies should skip promo pages.
-  bool are_startup_urls_managed =
-      session_startup_pref.TypeIsManaged(profile_->GetPrefs()) ||
-      session_startup_pref.TypeIsRecommended(profile_->GetPrefs());
+  // Infer an intent to suppress promo pages if any value for the
+  // RestoreOnStartup policy is mandatory or recommended.
+  const bool are_startup_urls_managed =
+      SessionStartupPref::TypeIsManaged(profile_->GetPrefs()) ||
+      SessionStartupPref::TypeHasRecommendedValue(profile_->GetPrefs());
+
   StartupTabs tabs = DetermineStartupTabs(
       StartupTabProviderImpl(), cmd_line_tabs, process_startup,
       is_incognito_or_guest, is_post_crash_launch,
@@ -709,8 +709,9 @@ void StartupBrowserCreatorImpl::DetermineURLsAndLaunch(
   if (!cmd_line_tabs.empty())
     behavior_options |= HAS_CMD_LINE_TABS;
 
-  BrowserOpenBehavior behavior =
-      DetermineBrowserOpenBehavior(session_startup_pref, behavior_options);
+  BrowserOpenBehavior behavior = DetermineBrowserOpenBehavior(
+      StartupBrowserCreator::GetSessionStartupPref(command_line_, profile_),
+      behavior_options);
 
   SessionRestore::BehaviorBitmask restore_options = 0;
   if (behavior == BrowserOpenBehavior::SYNCHRONOUS_RESTORE) {
